unpackaged/main/default/objects/Agreements__c/Agreements__c.object-meta.xml
<CustomObject>
    <description>A custom object, with its own security model, used for approving sales agreements such as NDAs, SA, SOWs and COs.  Agreements will be used to track contract specific terms and risk factors related to the contract.</description>
    <label>Agreements</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>