unpackaged/main/default/objects/Agreements__c/fields/Account_2__c.field-meta.xml
<CustomField>
    <fullName>Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Account 2)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>