unpackaged/main/default/objects/Agreements__c/fields/Agreement_on_File__c.field-meta.xml
<CustomField>
    <fullName>Agreement_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement on File</label>
    <type>Checkbox</type>
</CustomField>