unpackaged/main/default/objects/Agreements__c/fields/Agreement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Owner__c</fullName>
    <description>Account Director or Owner responsible for MSA signage, without Salesforce access.</description>
    <inlineHelpText>Account Director or Owner responsible for MSA signage</inlineHelpText>
    <label>Agreement Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>