unpackaged/main/default/objects/Agreements__c/fields/Allowances_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowances_Amount__c</fullName>
    <label>Allowances Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>