unpackaged/main/default/objects/Agreements__c/fields/AV_Opportunity_2__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Opportunity 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (AV Opportunity 2)</relationshipLabel>
    <relationshipName>Agreements7</relationshipName>
    <type>Lookup</type>
</CustomField>