unpackaged/main/default/objects/Agreements__c/fields/AV_Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Opportunity 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (AV Opportunity 3)</relationshipLabel>
    <relationshipName>Agreements8</relationshipName>
    <type>Lookup</type>
</CustomField>