unpackaged/main/default/objects/Agreements__c/fields/AV_Opportunity_4__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Opportunity 4</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (AV Opportunity 4)</relationshipLabel>
    <relationshipName>Agreements9</relationshipName>
    <type>Lookup</type>
</CustomField>