unpackaged/main/default/objects/Agreements__c/fields/AV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (AV Opportunity)</relationshipLabel>
    <relationshipName>Agreements6</relationshipName>
    <type>Lookup</type>
</CustomField>