unpackaged/main/default/objects/Agreements__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <label>Commissions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>