unpackaged/main/default/objects/Agreements__c/fields/Commissions_Department__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Department__c</fullName>
    <label>Commissions Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>