unpackaged/main/default/objects/Agreements__c/fields/Contract_Credit_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Credit_Payment_Terms__c</fullName>
    <label>Contract Credit/Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>