unpackaged/main/default/objects/Agreements__c/fields/Contract_Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Credit_Terms__c</fullName>
    <label>Contract Credit Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>