unpackaged/main/default/objects/Agreements__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <inlineHelpText>Date Contract Expires</inlineHelpText>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>