unpackaged/main/default/objects/Agreements__c/fields/Contractual_Allowances_Included__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Allowances_Included__c</fullName>
    <inlineHelpText>Select Yes if you are including the following in your contract: Signing Bonus, Flexible Spending, New Idea Fund, Marketing Allowance, or Commission.</inlineHelpText>
    <label>Contractual Allowances Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>