unpackaged/main/default/objects/Agreements__c/fields/Credit_Check_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Currency__c</fullName>
    <inlineHelpText>Please select the credit check currency</inlineHelpText>
    <label>Credit Check Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
                <default>true</default>
                <label>GBP</label>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>