unpackaged/main/default/objects/Agreements__c/fields/Credit_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Required__c</fullName>
    <inlineHelpText>Is a credit check required?</inlineHelpText>
    <label>Credit Check Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>