unpackaged/main/default/objects/Agreements__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <inlineHelpText>Please enter the credit limit value</inlineHelpText>
    <label>Credit Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>