unpackaged/main/default/objects/Agreements__c/fields/Creditsafe_Limit__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Limit__c</fullName>
    <description>The value from Credit safe, having to store as text as that is what credit safe returns</description>
    <formula>Account__r.bluetahiti__creditSafeLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is taken from Credit Limit on the account object, populated by Credit safe</inlineHelpText>
    <label>Creditsafe Limit</label>
    <type>Text</type>
</CustomField>