unpackaged/main/default/objects/Agreements__c/fields/Current_Carpet_Price_Per_SQM__c.field-meta.xml
<CustomField>
    <fullName>Current_Carpet_Price_Per_SQM__c</fullName>
    <description>Carpet Price Per SQM for the current year</description>
    <inlineHelpText>Carpet Price Per SQM for the current year</inlineHelpText>
    <label>Current Carpet Price Per SQM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>