unpackaged/main/default/objects/Agreements__c/fields/Current_Shell_Scheme_Price_Per_SQM__c.field-meta.xml
<CustomField>
    <fullName>Current_Shell_Scheme_Price_Per_SQM__c</fullName>
    <description>Shell Scheme Price Per SQM for the current year</description>
    <inlineHelpText>Shell Scheme Price Per SQM for the current year</inlineHelpText>
    <label>Current Shell Scheme Price Per SQM</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>