unpackaged/main/default/objects/Agreements__c/fields/Electrics_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Electrics_Price_Change__c</fullName>
    <label>Electrics Price Change</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>