unpackaged/main/default/objects/Agreements__c/fields/EMEA_Commissions__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Commissions__c</fullName>
    <inlineHelpText>Please enter all agreed commissions</inlineHelpText>
    <label>EMEA Commissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>