unpackaged/main/default/objects/Agreements__c/fields/EMEA_Discounts__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Discounts__c</fullName>
    <inlineHelpText>Please enter relevant EMEA Discounts here</inlineHelpText>
    <label>EMEA Discounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>