unpackaged/main/default/objects/Agreements__c/fields/EMEA_FOC__c.field-meta.xml
<CustomField>
    <fullName>EMEA_FOC__c</fullName>
    <inlineHelpText>Please enter any relevant FOC details here</inlineHelpText>
    <label>EMEA FOC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>