unpackaged/main/default/objects/Agreements__c/fields/FOC__c.field-meta.xml
<CustomField>
    <fullName>FOC__c</fullName>
    <label>FOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>