unpackaged/main/default/objects/Agreements__c/fields/Front_End_Percent__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Percent__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Front-End Percentage of Incentive</description>
    <label>Rep 1 Front-End Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>