unpackaged/main/default/objects/Agreements__c/fields/Furniture_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Price_Change__c</fullName>
    <label>Furniture Price Change</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>