unpackaged/main/default/objects/Agreements__c/fields/GES_Signed_by__c.field-meta.xml
<CustomField>
    <fullName>GES_Signed_by__c</fullName>
    <label>GES Signed by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Donna Hyland</fullName>
            </value>
            <value>
                <fullName>Kris Cooper</fullName>
            </value>
            <value>
                <fullName>Michael Stewart</fullName>
            </value>
            <value>
                <fullName>Nick Marshall</fullName>
            </value>
            <value>
                <fullName>Paul McKenna</fullName>
            </value>
            <value>
                <fullName>Sue Long</fullName>
            </value>
            <value>
                <fullName>Yasser al Maaytah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>