unpackaged/main/default/objects/Agreements__c/fields/If_no_credit_check_what_is_the_reason__c.field-meta.xml
<CustomField>
    <fullName>If_no_credit_check_what_is_the_reason__c</fullName>
    <inlineHelpText>If we haven&#39;t performed a credit check, please enter a reason</inlineHelpText>
    <label>If no credit check, what is the reason?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>