unpackaged/main/default/objects/Agreements__c/fields/Incentive_Created__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Created</label>
    <type>Checkbox</type>
</CustomField>