unpackaged/main/default/objects/Agreements__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <label>Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expo Convention Contractors</fullName>
            </value>
            <value>
                <fullName>Expo Group</fullName>
            </value>
            <value>
                <fullName>Fern</fullName>
            </value>
            <value>
                <fullName>Freeman</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>Hargrove</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Innovative</fullName>
            </value>
            <value>
                <fullName>Shepard</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>