unpackaged/main/default/objects/Agreements__c/fields/Is_Repeat_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeat_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repeat Contract?</label>
    <type>Checkbox</type>
</CustomField>