unpackaged/main/default/objects/Agreements__c/fields/Minimum_NSF__c.field-meta.xml
<CustomField>
    <fullName>Minimum_NSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minimum NSF</label>
    <type>Checkbox</type>
</CustomField>