unpackaged/main/default/objects/Agreements__c/fields/Mutual_Liability_Clause__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Liability_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mutual Liability Clause</label>
    <type>Checkbox</type>
</CustomField>