unpackaged/main/default/objects/Agreements__c/fields/Named_As_Additionally_Insured__c.field-meta.xml
<CustomField>
    <fullName>Named_As_Additionally_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Named As Additionally Insured</label>
    <type>Checkbox</type>
</CustomField>