unpackaged/main/default/objects/Agreements__c/fields/One_Pager__c.field-meta.xml
<CustomField>
    <fullName>One_Pager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Pager</label>
    <type>Checkbox</type>
</CustomField>