unpackaged/main/default/objects/Agreements__c/fields/Other_Bidders__c.field-meta.xml
<CustomField>
    <fullName>Other_Bidders__c</fullName>
    <label>Other Bidders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>