unpackaged/main/default/objects/Agreements__c/fields/Overtime_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Surcharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Surcharges</label>
    <type>Checkbox</type>
</CustomField>