unpackaged/main/default/objects/Agreements__c/fields/Previous_Carpet_Price_Per_SQM__c.field-meta.xml
<CustomField>
    <fullName>Previous_Carpet_Price_Per_SQM__c</fullName>
    <description>Carpet Price Per SQM for the previous year</description>
    <inlineHelpText>Carpet Price Per SQM for the previous year</inlineHelpText>
    <label>Previous Carpet Price Per SQM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>