unpackaged/main/default/objects/Agreements__c/fields/Previous_Shell_Scheme_Price_Per_SQM__c.field-meta.xml
<CustomField>
    <fullName>Previous_Shell_Scheme_Price_Per_SQM__c</fullName>
    <description>Shell Scheme Price Per SQM for the previous year</description>
    <inlineHelpText>Shell Scheme Price Per SQM for the previous year</inlineHelpText>
    <label>Previous Shell Scheme Price Per SQM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>