unpackaged/main/default/objects/Agreements__c/fields/Price_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Adjustments</label>
    <type>Checkbox</type>
</CustomField>