unpackaged/main/default/objects/Agreements__c/fields/Price_Increase_Percent__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Percent__c</fullName>
    <description>Price Increase Percent</description>
    <inlineHelpText>Price Increase Percent in lieu of PSP</inlineHelpText>
    <label>Price Increase Percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>