unpackaged/main/default/objects/Agreements__c/fields/PSPCode__c.field-meta.xml
<CustomField>
    <fullName>PSPCode__c</fullName>
    <label>PSPCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes: 3% will apply</fullName>
            </value>
            <value>
                <fullName>PI: 3% price increase</fullName>
            </value>
            <value>
                <fullName>No: No Exhibitor Revenue</fullName>
            </value>
            <value>
                <fullName>No: Management Decision</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>