unpackaged/main/default/objects/Agreements__c/fields/Renewal_Notice__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice__c</fullName>
    <label>Renewal Notice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>365 days</fullName>
            </value>
            <value>
                <fullName>730 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>