unpackaged/main/default/objects/Agreements__c/fields/Rep_1_Back_End_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rep_1_Back_End_Percent__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Rep 1 Back-End Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>