unpackaged/main/default/objects/Agreements__c/fields/Rep_3_Front_End_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rep_3_Front_End_Percent__c</fullName>
    <label>Rep 3 Front-End Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>