unpackaged/main/default/objects/Agreements__c/fields/Rep_4_Back_End_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rep_4_Back_End_Percent__c</fullName>
    <label>Rep 4 Back-End Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>