unpackaged/main/default/objects/Agreements__c/fields/SalesRep4__c.field-meta.xml
<CustomField>
    <fullName>SalesRep4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesRep4</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>SalesRep2 must be eligible for incentives. The selected Sales Person is not eligible.</errorMessage>
        <filterItems>
            <field>User.Eligible_for_Incentives__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements4</relationshipName>
    <type>Lookup</type>
</CustomField>