unpackaged/main/default/objects/Agreements__c/fields/Shell_Scheme_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Shell_Scheme_Price_Change__c</fullName>
    <label>Shell Scheme Price Change</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>