unpackaged/main/default/objects/Agreements__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <formula>Show_Occurrence__r.Show_Name__r.Name</formula>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>