unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_10__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence 10</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (Show Occurrence 10)</relationshipLabel>
    <relationshipName>AgreementsSO10</relationshipName>
    <type>Lookup</type>
</CustomField>