unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_2__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence 2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (Show Occurrence 2)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>