unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_2_Not_Blank__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_2_Not_Blank__c</fullName>
    <formula>IF(ISBLANK(Show_Occurrence_2__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Occurrence 2 Not Blank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>