unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_3__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements (Show Occurrence 3)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>