unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>