unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence Public</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>