unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_Public_2__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Public_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence Public 2</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Agreements (Show Occurrence Public 2)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>