unpackaged/main/default/objects/Agreements__c/fields/Show_Occurrence_Public_4__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Public_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence Public 4</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Agreements (Show Occurrence Public 4)</relationshipLabel>
    <relationshipName>Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>