unpackaged/main/default/objects/Agreements__c/fields/Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Start_Date__c</fullName>
    <description>Used within the Agreements Page layout</description>
    <inlineHelpText>State the date on which the show starts.</inlineHelpText>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>