unpackaged/main/default/objects/Agreements__c/fields/Smart_Sell__c.field-meta.xml
<CustomField>
    <fullName>Smart_Sell__c</fullName>
    <label>Smart Sell Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>