unpackaged/main/default/objects/Agreements__c/fields/SO_2_Blank__c.field-meta.xml
<CustomField>
    <fullName>SO_2_Blank__c</fullName>
    <formula>IF(ISBLANK(Show_Occurrence_2__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO 2 Blank?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>