unpackaged/main/default/objects/Agreements__c/fields/Special_Terms_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Notes__c</fullName>
    <label>Special Terms Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>