unpackaged/main/default/objects/Agreements__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>