unpackaged/main/default/objects/Agreements__c/fields/Total_Number_of_SOs__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_SOs__c</fullName>
    <formula>SO_1_Blank__c + SO_2_Blank__c + SO_3_Blank__c + SO_4_Blank__c + SO_5_Blank__c + SO_6_Blank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of SOs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>