unpackaged/main/default/objects/Agreements__c/fields/Under_Contract_with_GES__c.field-meta.xml
<CustomField>
    <fullName>Under_Contract_with_GES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Contract with GES</label>
    <type>Checkbox</type>
</CustomField>