unpackaged/main/default/objects/Agreements__c/recordTypes/AV_Contract_US.recordType-meta.xml
<RecordType>
    <fullName>AV_Contract_US</fullName>
    <active>true</active>
    <description>The AV Contract Record Type will include the terms, risk factors, and approvals/responses tracked for the show occurrence.</description>
    <label>AV Contract - US</label>
</RecordType>