unpackaged/main/default/objects/Agreements__c/recordTypes/AV_Exhibitor_US.recordType-meta.xml
<RecordType>
    <fullName>AV_Exhibitor_US</fullName>
    <active>true</active>
    <description>AV Exhibitor - US will include the terms, approvals/responses tracked for AV - Exhibitor Opportunities</description>
    <label>AV Exhibitor - US</label>
</RecordType>