unpackaged/main/default/objects/Agreements__c/recordTypes/Corporate_Account_Contract_US.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Account_Contract_US</fullName>
    <active>true</active>
    <description>Corporate Account Contract – US</description>
    <label>Corporate Account Contract – US</label>
</RecordType>