unpackaged/main/default/objects/Agreements__c/recordTypes/Custom_Build_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Custom_Build_EMEA</fullName>
    <active>true</active>
    <description>Show contracts for EMEA Custom Build</description>
    <label>Custom Build - EMEA</label>
</RecordType>