unpackaged/main/default/objects/Agreements__c/recordTypes/Exhibition_CAN.recordType-meta.xml
<RecordType>
    <fullName>Exhibition_CAN</fullName>
    <active>true</active>
    <description>Record Type for Canadian Agreements</description>
    <label>Exhibition - CAN</label>
</RecordType>