unpackaged/main/default/objects/Agreements__c/recordTypes/FacilityContract.recordType-meta.xml
<RecordType>
    <fullName>FacilityContract</fullName>
    <active>true</active>
    <description>The Facility Contract Record Type will include the terms, risk factors, and approvals/responses tracked for the facility.</description>
    <label>Facility Contract - US</label>
</RecordType>