unpackaged/main/default/objects/Agreements__c/recordTypes/OnPeak.recordType-meta.xml
<RecordType>
    <fullName>OnPeak</fullName>
    <active>true</active>
    <description>This is for OnPeak Agreement records</description>
    <label>OnPeak</label>
</RecordType>