unpackaged/main/default/objects/Agreements__c/recordTypes/Portfolio_Contract_US.recordType-meta.xml
<RecordType>
    <fullName>Portfolio_Contract_US</fullName>
    <active>true</active>
    <description>Portfolio Contract – US</description>
    <label>Portfolio Contract – US</label>
</RecordType>