unpackaged/main/default/objects/Agreements__c/recordTypes/Show_Contract_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Show_Contract_EMEA</fullName>
    <active>true</active>
    <label>Show Contract - EMEA</label>
</RecordType>